fixed navbar on smaller screen

--- a/style.css
+++ b/style.css
@@ -7,7 +7,9 @@
     border-radius: 2rem;
     border: 2px solid black;
 }
-
+.hamburger{
+    display: none;
+}
 .btn:hover,
 .btn:focus {
     background-color: black;
@@ -29,7 +31,7 @@
         align-items: center;
     }
 
-    .nav-items {
+    .navbar .nav-items {
         display: none;
     }
 
